Assign Cards to sunaccounts
